# shareholder

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: config_manager.cpp  config_manager.h  credential_store.cpp  credential_store.h  crypto.cpp  crypto.h  drive_mapper.cpp  drive_mapper.h  main.cpp  version.rc.in
